<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page2">

    <TextView
        android:id="@+id/text1"
        android:layout_margin="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:text="@string/_1_choose_any_two_digit_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:textSize="@dimen/_15ssp"
        android:text="@string/_2_add_both_digit_together"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text3"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:text="@string/_3_subtract_the_total_from_the_original_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />


    <TextView
        android:id="@+id/text4"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/popins"
        android:text="@string/example_if_chosen_number_is_69_add_two_digit_together_6_9_15_then_subtract_15_from_69_to_get_the_answer"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:text="@string/next"
        android:textColor="@color/black"
        android:layout_marginVertical="@dimen/_30sdp"
        android:textSize="@dimen/_13ssp"
        android:layout_gravity="center"
        />

</LinearLayout>