<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="@dimen/_30sdp"
        android:layout_gravity="center"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:text="@string/mind_reader"
        android:textColor="@color/black"
        android:textSize="@dimen/_45ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:layout_gravity="center"
        android:text="@string/i_can_read_your_mind"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        />

    <Button
        android:id="@+id/startBtn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popins"
        android:text="@string/start"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_50sdp"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />
</LinearLayout>